# fagci_os

./: .cproject  .gitignore  .project  CMakeLists.txt  Makefile
src/: boot.S  boot.asm  boot.s  kernel.cpp  linker.ld
src/arch/x86/: elf.cpp  hal.cpp  ps2.cpp  serial.cpp  stdio.cpp  string.cpp  tty.cpp
src/arch/x86/devices/: dev.cpp  ps2.cpp  tty.cpp  vesa.s
src/arch/x86/interrupts/: gdt.cpp  idt.cpp  interrupts.S  interrupts.cpp  panic.cpp
src/arch/x86/lib/: stdio.cpp
src/arch/x86/sys/: hal.cpp  memory.cpp
src/arch/x86/utils/: assert.cpp  debugger.cpp
src/base/: kernel.cpp
src/include/: assert.h  debugger.h  dev.h  elf.h  gdt.h  hal.h  idt.h  memory.h  multiboot.h  panic.h  ports.h  ps2.h  stdio.h  stdlib.h  string.h  tty.h  vga.h
src/klib/: Makefile  memory.cpp  memory.h  serial.cpp  serial.h  string.cpp  string.h  tty.cpp  tty.h  vga.h
